--- a/app/views/propcott/draft.html
+++ b/app/views/propcott/draft.html
@@ -6,6 +6,9 @@
 	{% parent %}
 	<script type="text/javascript" id="facebook-jssdk" src="//connect.facebook.net/en_US/sdk.js#xfbml=1&amp;version=v2.3&amp;appId=1475586926065669"></script>
 	<style>
+	body {
+		background: #eee;
+	}
 	#copy-button {
 		width: 100px;
 		text-align: center;
