--- a/app/views/account/general.html
+++ b/app/views/account/general.html
@@ -1,90 +1,110 @@
-{% extends 'base.html' %}
+{% extends '../base-new.html' %}
 
 {% block title %}General Settings{% endblock %}
 
-{% block account.main %}
+{% block head.end %}
+	{% parent %}
+	<style type="text/css">
+		#content {
+			min-height: 320px;
+			padding: 0 2em;
+		}
+	</style>
+{% endblock %}
+
+{% block hero %}
+{% autoescape false %}
+<div class="headline">
+	<div class="headline-content" style="padding-top: 1em;">
+		<h1>General Settings</h1>
+	</div>
+</div>
+{% endautoescape %}
+{% endblock %}
+
+{% block actions %}
+<li><a href="/account"><span class="typcn typcn-cog"></span><br>General</a></li>
+<li><a href="/account/notifications"><span class="typcn typcn-bell"></span><br>Notifications</a></li>
+<li><a href="/account/propcotts"><span class="typcn typcn-folder"></span><br>My Propcotts</a></li>
+{% endblock %}
+
+{% block content %}
+{% autoescape false %}
 <div class="account-block">
-	<h2>General <small>settings</small></h2>
 	<p style="margin: 0;">&nbsp;</p>
 	<form role="form" method="POST" action="account">
 		{{ csrf_input() }}
 
-<table>
-	<tr>
-		<th>Name</th>
-		<td><input type="text" name="name" value="{{ user.name }}"></td>
-	</tr>
-	<tr>
-		<th>Display Name</th>
-		<td><input type="text" name="display_name" value="{{ user.display_name }}"></td>
-	</tr>
-	<tr>
-		<th>Email address</th>
-		<td><input type="email" name="email" value="{{ user.email }}"></td>
-	</tr>
-	<tr>
-		<th>Password</th>
-		<td><input type="password" name="password"></td>
-	</tr>
-	<tr>
-		<th>Repeat</th>
-		<td><input type="password" name="password_verify"></td>
-	</tr>
-	<tr>
-		<th>Zip Code</th>
-		<td><input type="text" name="zip" value="{{ user.zip }}"></td>
-	</tr>
-	<tr>
-		<th>Organization</th>
-		<td><input type="text" name="org" value="{{ user.org }}"></td>
-	</tr>
-	<tr>
-		<th>Organization Website</th>
-		<td><input type="text" name="org_link" value="{{ user.org_link }}"></td>
-	</tr>
-	<tr>
-		<th>Birthday</th>
-		<td>
-		<select name="birth-month">
-			{% if user.birth_month %}
-			<optgroup label="Selected"><option value="{{ user.birth_month }}">{{ ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December'][user.birth_month] }}</option></optgroup>
-			<optgroup label="All Months">
-			{% endif %}
-			<option value="1">January</option>
-			<option value="2">February</option>
-			<option value="3">March</option>
-			<option value="4">April</option>
-			<option value="5">May</option>
-			<option value="6">June</option>
-			<option value="7">July</option>
-			<option value="8">August</option>
-			<option value="9">September</option>
-			<option value="10">October</option>
-			<option value="11">November</option>
-			<option value="12">December</option>
-			{% if user.birth_month %}
-			</optgroup>
-			{% endif %}
-		</select>
-		<input name="birth-year" placeholder="Year" maxlength="4" style="width: 6ex;" onchange="if(/[^d]/.test(this.value)) this.value=this.value.replace(/[^\d]/g,'')" onkeypress="return event.charCode >= 48 && event.charCode <= 57" value="{{ user.birth_year || '' }}">
-		</td>
-	</tr>
-	<tr>
-		<th>Gender</th>
-		<td><select name="gender">
-			<option value="1"{% if user.gender == 1 %} selected="true"{% endif %}>Male</option>
-			<option value="0"{% if user.gender == 0 %} selected="true"{% endif %}>Female</option>
-		</select></td>
-	</tr>
-</table>
-		<!--p>Avatar: <img src="{{ user.avatar }}" style="max-width:80px; max-height:80px; margin-right:10px; border-radius:8px;" /> <input name="avatar" type="file" style="display:inline;" /></p-->
+		<table>
+			<tr>
+				<th>Name</th>
+				<td><input type="text" name="name" value="{{ user.name }}"></td>
+			</tr>
+			<tr>
+				<th>Display Name</th>
+				<td><input type="text" name="display_name" value="{{ user.display_name }}"></td>
+			</tr>
+			<tr>
+				<th>Email address</th>
+				<td><input type="email" name="email" value="{{ user.email }}"></td>
+			</tr>
+			<tr>
+				<th>Password</th>
+				<td><input type="password" name="password"></td>
+			</tr>
+			<tr>
+				<th>Repeat</th>
+				<td><input type="password" name="password_verify"></td>
+			</tr>
+			<tr>
+				<th>Zip Code</th>
+				<td><input type="text" name="zip" value="{{ user.zip }}"></td>
+			</tr>
+			<tr>
+				<th>Organization</th>
+				<td><input type="text" name="org" value="{{ user.org }}"></td>
+			</tr>
+			<tr>
+				<th>Organization Website</th>
+				<td><input type="text" name="org_link" value="{{ user.org_link }}"></td>
+			</tr>
+			<tr>
+				<th>Birthday</th>
+				<td>
+				<select name="birth-month">
+					{% if user.birth_month %}
+					<optgroup label="Selected"><option value="{{ user.birth_month }}">{{ ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December'][user.birth_month] }}</option></optgroup>
+					<optgroup label="All Months">
+					{% endif %}
+					<option value="1">January</option>
+					<option value="2">February</option>
+					<option value="3">March</option>
+					<option value="4">April</option>
+					<option value="5">May</option>
+					<option value="6">June</option>
+					<option value="7">July</option>
+					<option value="8">August</option>
+					<option value="9">September</option>
+					<option value="10">October</option>
+					<option value="11">November</option>
+					<option value="12">December</option>
+					{% if user.birth_month %}
+					</optgroup>
+					{% endif %}
+				</select>
+				<input name="birth-year" placeholder="Year" maxlength="4" style="width: 6ex;" onchange="if(/[^d]/.test(this.value)) this.value=this.value.replace(/[^\d]/g,'')" onkeypress="return event.charCode >= 48 && event.charCode <= 57" value="{{ user.birth_year || '' }}">
+				</td>
+			</tr>
+			<tr>
+				<th>Gender</th>
+				<td><select name="gender">
+					<option value="1"{% if user.gender == 1 %} selected="true"{% endif %}>Male</option>
+					<option value="0"{% if user.gender == 0 %} selected="true"{% endif %}>Female</option>
+				</select></td>
+			</tr>
+		</table>
 		<p><input type="submit" value="Update"></p>
 	</form>
 </div>
-
-<div class="account-block">
-	<h2>Close <small>your account</small></h2>
-	<p><a href="{{ url('/account/merge') }}">Merge</a> with another Propcott account.</p>
-	<p><a href="{{ url('/account/close') }}">Close</a> your Propcott account.</p>
-</div>
+{% endautoescape %}
 {% endblock %}
