--- a/app/views/account/notifications.html
+++ b/app/views/account/notifications.html
@@ -1,54 +1,76 @@
-{% extends 'base.html' %}
+{% extends '../base-new.html' %}
 
-{% block title %}General Settings{% endblock %}
+{% block title %}Notifications{% endblock %}
 
-{% block account.main %}
-<div class="account-block">
-	<h2>Notifications <small>and reminders</small></h2>
-	
-	<form role="form" method="POST" action="{{ url('/account/notifications') }}">
-		<table style="width: 100%">
-			<tr>
-				<td></td>
-				<th style="text-align: center">Email</th>
-			</tr>
-			<tr>
-				<td>I want to be notified as soon as I join a Propcott</td>
-				<td><input type="checkbox" name="join-email"{% if user.notifications['join-email'] %} checked="true"{% endif %}></td>
-			</tr>
-			<tr>
-				<td>I want to be notified as soon as I publish a Propcott</td>
-				<td><input type="checkbox" name="publish-email"{% if user.notifications['publish-email'] %} checked="true"{% endif %}></td>
-			</tr>
-			<tr>
-				<td>I want to receive reminders on Propcotts I have joined <select name="reminders-time"><option{% if user.notifications['reminders-time'] == 'Monthly' %} selected="true"{% endif %}>Monthly</option><option{% if user.notifications['reminders-time'] == 'Weekly' %} selected="true"{% endif %}>Weekly</option></select></td>
-				<td><input type="checkbox" name="reminders-email"{% if user.notifications['reminders-email'] %} checked="true"{% endif %}></td>
-			</tr>
-			{#<tr>
-				<td>I want to receive updates on Propcotts I have joined</td>
-				<td><input type="checkbox" name="updates-email"></td>
-				<td><input type="checkbox" name="updates-sms"></td>
-			</tr>#}
-			{#<tr>
-				<td>I want to be notified when a Propcott I joined is successful</td>
-				<td><input type="checkbox" name="successful-email"></td>
-				<td><input type="checkbox" name="successful-sms"></td>
-			</tr>#}
-			{#<tr>
-				<td>I want to receive Propcotts weekly newsletters</td>
-				<td><input type="checkbox" name="newsletter-email"></td>
-				<td>&nbsp;</td>
-			</tr>#}
-			{#<tr>
-				<td>I want to receive suggested Propcotts that are similar to Propcotts I have joined</td>
-				<td><input type="checkbox" name="suggestions-email"></td>
-				<td>&nbsp;</td>
-			</tr>#}
-		</table>
-		<p style="text-align: right;">
-			{{ csrf_field }}
-			<input type="submit" value="Update" />
-		</p>
-	</form>
+{% block head.end %}
+	{% parent %}
+	<style type="text/css">
+		#content {
+			min-height: 320px;
+			padding: 0 2em;
+		}
+	</style>
+{% endblock %}
+
+{% block hero %}
+{% autoescape false %}
+<div class="headline">
+	<div class="headline-content" style="padding-top: 1em;">
+		<h1>Notifications and Reminders</h1>
+	</div>
 </div>
+{% endautoescape %}
+{% endblock %}
+
+{% block actions %}
+<li><a href="/account"><span class="typcn typcn-cog"></span><br>General</a></li>
+<li><a href="/account/notifications"><span class="typcn typcn-bell"></span><br>Notifications</a></li>
+<li><a href="/account/propcotts"><span class="typcn typcn-folder"></span><br>My Propcotts</a></li>
+{% endblock %}
+
+{% block content %}
+<form role="form" method="POST" action="{{ url('/account/notifications') }}">
+	<table style="width: 100%">
+		<tr>
+			<td></td>
+			<th style="text-align: center">Email</th>
+		</tr>
+		<tr>
+			<td>I want to be notified as soon as I join a Propcott</td>
+			<td><input type="checkbox" name="join-email"{% if user.notifications['join-email'] %} checked="true"{% endif %}></td>
+		</tr>
+		<tr>
+			<td>I want to be notified as soon as I publish a Propcott</td>
+			<td><input type="checkbox" name="publish-email"{% if user.notifications['publish-email'] %} checked="true"{% endif %}></td>
+		</tr>
+		<tr>
+			<td>I want to receive reminders on Propcotts I have joined <select name="reminders-time"><option{% if user.notifications['reminders-time'] == 'Monthly' %} selected="true"{% endif %}>Monthly</option><option{% if user.notifications['reminders-time'] == 'Weekly' %} selected="true"{% endif %}>Weekly</option></select></td>
+			<td><input type="checkbox" name="reminders-email"{% if user.notifications['reminders-email'] %} checked="true"{% endif %}></td>
+		</tr>
+		{#<tr>
+			<td>I want to receive updates on Propcotts I have joined</td>
+			<td><input type="checkbox" name="updates-email"></td>
+			<td><input type="checkbox" name="updates-sms"></td>
+		</tr>#}
+		{#<tr>
+			<td>I want to be notified when a Propcott I joined is successful</td>
+			<td><input type="checkbox" name="successful-email"></td>
+			<td><input type="checkbox" name="successful-sms"></td>
+		</tr>#}
+		{#<tr>
+			<td>I want to receive Propcotts weekly newsletters</td>
+			<td><input type="checkbox" name="newsletter-email"></td>
+			<td>&nbsp;</td>
+		</tr>#}
+		{#<tr>
+			<td>I want to receive suggested Propcotts that are similar to Propcotts I have joined</td>
+			<td><input type="checkbox" name="suggestions-email"></td>
+			<td>&nbsp;</td>
+		</tr>#}
+	</table>
+	<p style="text-align: right;">
+		{{ csrf_field }}
+		<input type="submit" value="Update" />
+	</p>
+</form>
 {% endblock %}
