--- a/app/views/propcott/create.html
+++ b/app/views/propcott/create.html
@@ -7,6 +7,7 @@
 	<style type="text/css">
 		body {
 			padding-top: 0;
+			background: #eee;
 		}
 		#navigation, .navigation {
 			position: relative;
