--- a/app/views/propcott/manage.html
+++ b/app/views/propcott/manage.html
@@ -1,6 +1,13 @@
-{% extends '../base.html' %}
+{% extends '../base-new.html' %}
 
-{% block title %}{{ propcott.title }}{% endblock %}
+{% block title %}{% autoescape false %}{{ propcott.title }}{% endautoescape %}{% endblock %}
+
+{% block head.end %}
+	{% parent %}
+	{% if propcott.media_type %}
+	<meta name="thumbnail" content="http://{% if propcott.media_type == 'image' %}static.propcott.com/{{ propcott.media_link }}{% elseif propcott.media_type == 'video' %}img.youtube.com/vi/{{ propcott.media_link }}/hqdefault.jpg{% endif %}" />
+	{% endif %}
+{% endblock %}
 
 {% block body.end %}
 	{% parent %}
@@ -50,8 +57,8 @@
 		this.updateElement();
 	});
 
-	document.getElementById('propcott-updates-button').onclick = function() {
-		var elem = document.getElementById('propcott-updates'), last;
+	document.getElementById('updates-button').onclick = function() {
+		var elem = document.getElementById('updates'), last;
 		(function Scroll_To(elem, pos) {
 			var y = elem.scrollTop;
 			y += Math.round((pos - y) * 0.3);
@@ -66,7 +73,7 @@
 		})(document.body, elem.offsetTop);
 		return false;
 	};
-
+	
 	var client = new ZeroClipboard( document.getElementById("copy-button") );
 	client.on("ready", function(readyEvent) {
 		var timeout, text;
@@ -82,7 +89,7 @@
 		});
 	});
 	</script>
-	<style>
+	<style type="text/css">
 	.cke_button__post_update .cke_button_icon {
 		display: none;
 	}
@@ -102,6 +109,7 @@
 	#cke_17 {
 		float: right;
 	}
+	
 	#copy-button {
 		width: 100px;
 		text-align: center;
@@ -147,7 +155,7 @@
 	}
 	.sharebuttons {
 		text-align: center;
-		margin: auto;
+		margin: 1em auto;
 		max-width :330px;
 	}
 	.sharebutton {
@@ -162,135 +170,219 @@
 		color:white;
 		margin-bottom:0.5em;
 	}
-	#propcott-alt, #propcott-how {
-		font-weight: bold;
-		margin-top: 0;
+	.headline {
+		position: relative;
 	}
-	f</style>
+	.headline-content {
+		padding: 2em;
+		background: #111;
+		background-color: rgba(0,0,0,0.75);
+		color: white;
+		position: relative;
+		z-index: 1;
+		text-align: center;
+	}
+	.headline-background {
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		background-repeat: no-repeat;
+		background-position: center center;
+		background-size: cover;
+		overflow: hidden;
+		-webkit-filter: blur(5px);
+		filter: blur(5px);
+	}
+	.join-button {
+		display: block;
+		color: white;
+		background: red;
+		border: 0px;
+		border-radius: 10px;
+	}
+	.ribbon {
+		background: #BD1417;
+		position: relative;
+		color: white;
+		display: block;
+		padding: .5em 1em;
+		text-align: center;
+		font-size: 1.2em;
+		font-weight: bold;
+	}
+	.ribbon:before, .ribbon:after {
+		position: absolute;
+		top: .6em;
+		bottom: -0.6em;
+		content: ' ';
+		border: 1.25em solid #A0181A;
+	}
+	.ribbon:before {
+		right: 100%;
+		border-right-width: 6px;
+		border-left-width: 16px;
+		border-left-color: #eee;
+	}
+	.ribbon:after {
+		left: 100%;
+		border-left-width: 6px;
+		border-right-width: 16px;
+		border-right-color: #eee;
+	}
+	.metric {
+		font-weight: bold;
+		font-size: 0.8em;
+	}
+	.metric p {
+		margin: 0.5em 2.5em;
+	}
+	.metric-bar, .metric-fill {
+		position: relative;
+		display: block;
+		height: 4px;
+	}
+	.metric-fill {
+		background-color: #BD1417;
+	}
+	.fb-comments {
+		margin: 1em 0;
+		display: block;
+	}
+	.fb-comments, .fb-comments * {
+		width: 100% !important;
+	}
+	</style>
 {% endblock %}
 
+
+{% block actions %}
+<li><a href="/p/{{ propcott.slug }}/edit"><span class="typcn typcn-pen"></span><br>Edit</a></li>
+<li><a href="#updates" id="updates-button"><span class="typcn typcn-microphone"></span><br>Post Update</a></li>
+{% endblock %}
+
+{% block hero %}
+{% autoescape false %}
+<div class="headline">
+	<div class="headline-content">
+		<div class="container">
+			<h1 id="propcott-title" style="margin-top: 0;">{{ propcott.title }}</h1>
+			<div class="row" style="margin: 0; margin-top: 1em;">
+				<div class="col-6" style="vertical-align: top;">
+					<p style="line-height: 1; text-align: right; margin: 0; border-right: 1px solid white; padding-right: 1em;"><strong style="font-size: 3em;">{{ propcott.support.all }}</strong><br>propcotters</p>
+				</div>
+				<div class="col-6" style="vertical-align: top; text-align: left;">
+					<p style="margin: 0; padding-left: 1em; line-height: 1;">propcotting<br><strong style="font-size: 3em;">{{ propcott.target }}</strong></p>
+				</div>
+			</div>
+			{% if propcott.creator %}
+				<p style="margin: 0; margin-top: 1em;">By {{ propcott.creator.display_name }}
+				{% if propcott.creator.org %} from
+					{% if propcott.creator.org_link %}
+						<a style="color: white;" href="{{ propcott.creator.org_link }}">{{ propcott.creator.org }}</a>
+					{% else %}
+						<strong>{{ propcott.creator.org }}</strong>
+					{% endif %}
+				{% endif %}
+				</p>
+			{% endif %}
+		</div>
+	</div>
+	
+	{% if propcott.media_type %}
+	<div class="headline-background" style="background-image: url('{% if propcott.media_type == 'image' %}http://static.propcott.com/{{ propcott.media_link }}{% elseif propcott.media_type == 'video' %}http://img.youtube.com/vi/{{ propcott.media_link }}/hqdefault.jpg{% endif %}');"></div>
+	{% endif %}
+</div>
+{% endautoescape %}
+{% endblock %}
+ 
 {% block content %}
 {% autoescape false %}
-<div class="navigation" style="background-color: #397DD8; color: #ffffff;" data-sticky="0">
-	<div class="container">
-		<a class="block round navigation-item" href="/p/{{ propcott.slug }}/edit">
-			<span class="navigation-text">Edit</span>
-			<span class="typcn typcn-pencil"></span>
-		</a>
-		<a class="block round navigation-item" id="propcott-updates-button" href="#propcott-updates">
-			<span class="navigation-text">Post Update</span>
-			<span class="typcn typcn-microphone"></span>
-		</a>
+<div class="row">
+	<div class="col-12 col-md-5" style="float: right; clear: right;">
+		{% if propcott.media_type %}
+			{% if propcott.media_type == 'image' %}
+			<div style="text-align: center; background: #ddd"><img src="http://static.propcott.com/{{ propcott.media_link }}" style="max-width: 100%; max-height: 250px; vertical-align: top;"></div>
+			{% elseif propcott.media_type == 'video' %}
+			<div class="fluid-video"><div class="inner"><iframe src="https://www.youtube.com/embed/{{ propcott.media_link }}" frameborder="0" allowfullscreen></iframe></div></div>
+			{% endif %}
+		{% endif %}
+		<div class="metric clear">
+			<div class="metric-bar"><div class="metric-fill" style="width: {{ propcott.support.all / propcott.metric * 100 }}%;"></div></div>
+			<p style="float: left;">{{ propcott.support.all }} propcotters</p>
+			<p style="float: right;">{{ propcott.metric - propcott.support.all }} more for {{ propcott.metric }}</p>
+		</div>
 	</div>
-</div>
+	
+	<div class="col-12 col-md-7" style="padding: 0 2em;">
+		<h3>Goal</h3>
+		<p>{{ propcott.goal }}</p>
+	</div>
+	
+	{% if propcott.how %}
+	<div class="col-12 col-md-5" style="padding: 0 2em; float: right; clear: right">
+		<h3>What to do:</h3>
+		<ul id="propcott-how">
+			{% for how in propcott.how %}<li>{{ how }}</li>{% endfor %}
+		</ul>
+	</div>
+	{% endif %}
 
-<div class="container">
-	<div class="row">
-		<div class="col-7 push-5">
-			<div id="propcott" class="propcott-full">
-				<div id="propcott-featured-image">
-					<h1 id="propcott-title" style="font-size: {{ propcott.title_size }}">{{ propcott.title }}</h1>
-				</div>
-				<div id="propcott-content">
-					{% if propcott.creator %}
-						<p style="float: right; color: #aaa; margin: 0 1em; text-align: right; font-family: 'Josefin Sans',sans-serif; line-height: 1;">Propcott by {{ propcott.creator.display_name }}
-						{% if propcott.creator.org %}<br>from
-							{% if propcott.creator.org_link %}
-								<a href="{{ propcott.creator.org_link }}">{{ propcott.creator.org }}</a>
-							{% else %}
-								<strong style="color: #333;">{{ propcott.creator.org }}</strong>
-							{% endif %}
-						{% endif %}
-						</p>
-					{% endif %}
+	{% if propcott.alt %}
+	<div class="col-12 col-md-5" style="padding: 0 2em; float: right; clear: right">
+		<h3>Instead, try...</h3>
+		<ul id="propcott-alt">
+			{% for alt in propcott.alt %}<li>{{ alt }}</li>{% endfor %}
+		</ul>
+	</div>
+	{% endif %}
+	
+	<div class="col-12 col-md-7" style="padding: 0 2em;">
+		<h3>Why</h3>
+		<p>{{ propcott.why }}</p>
+	</div>
+	
+	<div class="col-12 col-md-5" style="padding: 0 2em; float: right; clear: right">
+		<h3>Share!</h3>
+		<p>
+			<span id="copy-label" class="typcn typcn-link"></span>
+			<button id="copy-button" data-clipboard-text="http://www.propcott.com/p/{{ propcott.slug }}">Copy link</button>
+			<span id="copy-link">http://www.propcott.com/p/{{ propcott.slug }}</span>
+		</p>
+		<p class="sharebuttons">
+			<a href="mailto:?subject={{ encodeURIComponent(propcott.title) }}&amp;body=http://www.propcott.com/p/{{ propcott.slug }}" class="sharebutton" style="background-color:#0a88ff;">email</a>
 
-					<p style="margin: 1em;">Propcotting <span style="color: rgb(215,0,0);">{{ propcott.target }}</span></p>
+			<a href="https://www.facebook.com/sharer/sharer.php?u=http://www.propcott.com/p/{{ propcott.slug }}" class="sharebutton" style="background-color:#306199;" target="_blank">facebook</a>
 
-					<hr />
+			<a href="http://tumblr.com/share/link?url=http://www.propcott.com/p/{{ propcott.slug }}&amp;name={{ encodeURIComponent(propcott.title) }}" class="sharebutton" style="background-color:#32506d;" target="_blank">tumblr</a>
 
-					<h2 class="headline">Goal</h2>
-					<p style="margin: 1em;">{{ propcott.goal }}</p>
+			<a href="http://twitter.com/share?text={{ encodeURIComponent(propcott.title) }}&amp;url=http://www.propcott.com/p/{{ propcott.slug }}&amp;hashtags=propcott" class="sharebutton" style="background-color:#26c4f1;" target="_blank">twitter</a>
 
-					<hr />
+			<a href="http://www.reddit.com/submit?url=http://www.propcott.com/p/{{ propcott.slug }}&amp;title={{ encodeURIComponent(propcott.title) }}" class="sharebutton" style="background-color:#336699;" target="_blank">reddit</a>
 
-					<h2 class="headline">Why</h2>
-					<div style="margin: 0 1em;">{{ propcott.why }}</div>
-				</div>
-			</div>
-			<div id="propcott-updates">
-				<textarea id="propcott-new-update"
-					  name="propcott-new-update"
-					  class="editable-region"
-					  placeholder="Update your propcotters"
-					  ></textarea>
-				{% if propcott.updates.length %}
-					<h2 style="font-size: 1.2em; margin: 0; padding: 16px; border-top: 1px solid #eee;">Updates and Announcements</h2>
-					{% for update in propcott.updates %}
-						<div class="propcott-update{% if loop.index == 0 %} first{% endif %}">
-						<div style="color: gray; float: right; font-size: .8em; margin: 0 0 1em 1em;"></div>
-							{{ update.content }}
-						</div>
-					{% endfor %}
-				{% endif %}
-			</div>
+			<a href="https://plus.google.com/share?url=http://www.propcott.com/p/{{ propcott.slug }}" class="sharebutton" style="background-color:#e93f2e;" target="_blank">google+</a>
 
-			<div class="fb-comments" data-href="http://www.propcott.com/p/{{ propcott.id }}" data-numposts="5"></div>
-		</div>
-		<div class="col-5 pull-7">
-			<div id="propcott-sidebar">
-				{% if propcott.media_type == 'image' %}
-				<div id="propcott-media" style="background-image: url('http://static.propcott.com/{{ propcott.media_link }}');"></div>
-				{% elseif propcott.media_type == 'video' %}
-				<div id="propcott-media">
-					<iframe style="width: 100%; height: 250px;" src="https://www.youtube.com/embed/{{ propcott.media_link }}" frameborder="0" allowfullscreen></iframe>
-				</div>
-				{% else %}
-				<div id="propcott-media"></div>
-				{% endif %}
+			<a href="http://pinterest.com/pin/create/button/?url=http://www.propcott.com/p/{{ propcott.slug }}&amp;media={% if propcott.media_type == 'image' %}http://static.propcott.com/{{ propcott.media_link }}{% endif %}{% if propcott.media_type == 'video' %}http://img.youtube.com/vi/{{ propcott.media_link }}/mqdefault.jpg{% endif %}&amp;description={{ encodeURIComponent(propcott.title) }}" class="sharebutton" style="background-color:#b81621;" target="_blank">pinterest</a>
+		</p>
+	</div>
+	
+	<div class="col-12 col-md-7" style="padding: 0 2em;">
+		<h3 id="updates">Updates</h3>
+		<textarea id="propcott-new-update"
+		  name="propcott-new-update"
+		  class="editable-region"
+		  placeholder="Update your propcotters"
+		  ></textarea>
+		{% for update in propcott.updates && propcott.updates.reverse() %}
+			<p>
+				{% if update.created %}<span style="float: right; color: #777; margin: 0 0 1em 1em;">{{ date(update.created) }}</span>{% endif %}
+				{{ update.content || update }}
+			</p>
+		{% endfor %}
 
-				<div style="margin: .5em 1em 1em 0">
-					<p style="float: right; color: rgb(215, 0, 0); font-weight: bold; font-family: 'Josefin Sans',sans-serif; vertical-align: top; margin: 0; line-height: 1;text-align: right; margin-top: -.5em;"><span style="font-size: 1.5em; ">{{ propcott.support.all }}</span><br>propcotters</p>
-
-					<h2 style="font-size: 1.6em;margin: 1em 0 0 0;">Join <small>this propcott!</small></h2>
-
-					{% if propcott.how %}
-						<p style="margin-bottom: 0;">What to do:</p>
-						<ul id="propcott-how">
-							{% for how in propcott.how %}<li>{{ how }}</li>{% endfor %}
-						</ul>
-					{% endif %}
-
-					{% if propcott.alt %}
-						<p style="margin-bottom: 0;">Instead, you may want to try...</p>
-						<ul id="propcott-alt">
-							{% for alt in propcott.alt %}<li>{{ alt }}</li>{% endfor %}
-						</ul>
-					{% endif %}
-
-					<h3>Spread <small>the word!</small></h3>
-					<p class="sharebuttons">
-						<a href="mailto:?subject={{ encodeURIComponent(propcott.title) }}&amp;body=http://www.propcott.com/p/{{ propcott.slug }}" class="sharebutton" style="background-color:#0a88ff;">email</a>
-
-						<a href="https://www.facebook.com/sharer/sharer.php?u=http://www.propcott.com/p/{{ propcott.slug }}" class="sharebutton" style="background-color:#306199;" target="_blank">facebook</a>
-
-						<a href="http://tumblr.com/share/link?url=http://www.propcott.com/p/{{ propcott.slug }}&amp;name={{ encodeURIComponent(propcott.title) }}" class="sharebutton" style="background-color:#32506d;" target="_blank">tumblr</a>
-
-						<a href="http://twitter.com/share?text={{ encodeURIComponent(propcott.title) }}&amp;url=http://www.propcott.com/p/{{ propcott.slug }}&amp;hashtags=propcott" class="sharebutton" style="background-color:#26c4f1;" target="_blank">twitter</a>
-
-						<a href="http://www.reddit.com/submit?url=http://www.propcott.com/p/{{ propcott.slug }}&amp;title={{ encodeURIComponent(propcott.title) }}" class="sharebutton" style="background-color:#336699;" target="_blank">reddit</a>
-
-						<a href="https://plus.google.com/share?url=http://www.propcott.com/p/{{ propcott.slug }}" class="sharebutton" style="background-color:#e93f2e;" target="_blank">google+</a>
-
-						<a href="http://pinterest.com/pin/create/button/?url=http://www.propcott.com/p/{{ propcott.slug }}&amp;media={% if propcott.media_type == 'image' %}http://static.propcott.com/{{ propcott.media_link }}{% endif %}{% if propcott.media_type == 'video' %}http://img.youtube.com/vi/{{ propcott.media_link }}/mqdefault.jpg{% endif %}&amp;description={{ encodeURIComponent(propcott.title) }}" class="sharebutton" style="background-color:#b81621;" target="_blank">pinterest</a>
-					</p>
-					<p>
-						<span id="copy-label" class="typcn typcn-link"></span>
-						<button id="copy-button" data-clipboard-text="http://www.propcott.com/p/{{ propcott.slug }}">Copy link</button>
-						<span id="copy-link">http://www.propcott.com/p/{{ propcott.slug }}</span>
-					</p>
-				</div>
-			</div>
-		</div>
+		<h3 id="comments">Comments</h3>
+		<div class="fb-comments" data-href="http://www.propcott.com/p/{{ propcott.id }}" data-numposts="5"></div>
 	</div>
 </div>
 {% endautoescape %}
