--- a/app/views/propcott/preview.html
+++ b/app/views/propcott/preview.html
@@ -4,6 +4,9 @@
 
 {% block body.end %}
 	<style type="text/css">
+	body {
+		background: #eee;
+	}
 	#propcott-alt, #propcott-how {
 		font-weight: bold;
 		margin-top: 0;
