--- a/app/views/static/about.html
+++ b/app/views/static/about.html
@@ -1,76 +1,45 @@
-{% extends '../base.html' %}
+{% extends '../base-new.html' %}
 
 {% block title %}About Propcott{% endblock %}
 
-{% block content %}
-<style>
-.left-pane {
-	max-width: 250px;
-	float: left;
-	padding: 1em 0;
-	position: relative;
-}
-.right-pane {
-	overflow: hidden;
-	position: relative;
-	z-index: 1;
-}
-.content {
-	border-radius: 10px;
-	padding: 1em;
-	margin-bottom: 1em;
-	background: white;
-}
-.left-nav {
-    font-family: 'Josefin Sans',sans-serif;
-    list-style: none;
-    padding: 0;
-    float: left;
-    text-align: right;
-    margin-top: 3px;
-    line-height: 1;
-}
-.left-nav a {
-    border-right: 3px solid #E77E8A;
-    padding: .75em .5em;
-    display: inline-block;
-    transition: 150ms linear;
-    font-size: 1.1em;
-    position: relative;
-    left: 3px;
-}
-.left-nav .active a {
-	left: 0;
-}
-.left-nav a:hover {
-	text-decoration: none;
-	left: 0;
-}
-</style>
-<div class="container" style="margin-top: 1em;">
-	<div class="left-pane">
-		<ul class="left-nav">
-			<li class="active"><a href="/about">About Propcott</a></li>
-			<li><a href="/creator-tips">Tips for Propcott Creators</a></li>
-			<li><a href="/supporter-tips">Tips for Propcotters</a></li>
-		</ul>
-	</div>
-	<div class="right-pane">
-		<div class="content">
-			<h1>About</h1>
+{% block head.end %}
+	{% parent %}
+	<script src='https://www.google.com/recaptcha/api.js'></script>
+	<style type="text/css">
+	#content {
+		padding: 1em 2em;
+		margin: 0;
+		margin-bottom: 2em;
+	}
+	</style>
+{% endblock %}
 
-			<h2>What is Propcott.com?</h2>
-			<p>Propcott.com aims to provide any discontent indvidual with the platform to start or join a boycotting campaign with unparalleled ease.</p>
-
-			<h2>What are Propcotts?</h2>
-			<p>Propcotts are the reinventions of boycotts. By grasping the fundamental principle of boycotts, which is to combine and abstain from a given entity, propcotts break down the most important aspects into a few simple sections (Who, What, Why, How) so that users who are seeking to start a propcott can get the campaign off the ground promptly while those considering joining a Propcott can quickly understand what the Propcott is all about.</p>
-
-			<h2>How to Propcott?</h2>
-			<ul>
-				<li>Start a Propcott Campaign by clicking "Start a Propcott" at the top of the page and filling out the five fields listed.</li>
-				<li>Join a Propcott by clicking "Join" on the left side of the page after reading through the propcott.</li>
-			</ul>
-		</div>
+{% block hero %}
+{% autoescape false %}
+<div class="headline">
+	<div class="headline-content" style="padding-top: 1em;">
+		<h1>About Propcott</h1>
 	</div>
 </div>
+{% endautoescape %}
+{% endblock %}
+
+{% block actions %}
+<li><a href="/about">About<br>Propcott</a></li>
+<li><a href="/creator-tips">Tips for<br>Propcott Creators</a></li>
+<li><a href="/supporter-tips">Tips for<br>Propcotters</a></li>
+{% endblock %}
+
+{% block content %}
+<h2>What is Propcott.com?</h2>
+<p>Propcott.com aims to provide any discontent indvidual with the platform to start or join a boycotting campaign with unparalleled ease.</p>
+
+<h2>What are Propcotts?</h2>
+<p>Propcotts are the reinventions of boycotts. By grasping the fundamental principle of boycotts, which is to combine and abstain from a given entity, propcotts break down the most important aspects into a few simple sections (Who, What, Why, How) so that users who are seeking to start a propcott can get the campaign off the ground promptly while those considering joining a Propcott can quickly understand what the Propcott is all about.</p>
+
+<h2>How to Propcott?</h2>
+<ul>
+	<li>Start a Propcott Campaign by clicking "Start a Propcott" at the top of the page and filling out the five fields listed.</li>
+	<li>Join a Propcott by clicking "Join" on the left side of the page after reading through the propcott.</li>
+</ul>
 {% endblock %}
