--- a/app/views/static/creator-tips.html
+++ b/app/views/static/creator-tips.html
@@ -1,88 +1,57 @@
-{% extends '../base.html' %}
+{% extends '../base-new.html' %}
 
-{% block title %}About Propcott{% endblock %}
+{% block title %}Tips for Propcott Creators{% endblock %}
 
-{% block content %}
-<style>
-.left-pane {
-	max-width: 250px;
-	float: left;
-	padding: 1em 0;
-	position: relative;
-}
-.right-pane {
-	overflow: hidden;
-	position: relative;
-	z-index: 1;
-}
-.content {
-	border-radius: 10px;
-	padding: 1em;
-	margin-bottom: 1em;
-	background: white;
-}
-.left-nav {
-    font-family: 'Josefin Sans',sans-serif;
-    list-style: none;
-    padding: 0;
-    float: left;
-    text-align: right;
-    margin-top: 3px;
-    line-height: 1;
-}
-.left-nav a {
-    border-right: 3px solid #E77E8A;
-    padding: .75em .5em;
-    display: inline-block;
-    transition: 150ms linear;
-    font-size: 1.1em;
-    position: relative;
-    left: 3px;
-}
-.left-nav .active a {
-	left: 0;
-}
-.left-nav a:hover {
-	text-decoration: none;
-	left: 0;
-}
-</style>
-<div class="container" style="margin-top: 1em;">
-	<div class="left-pane">
-		<ul class="left-nav">
-			<li><a href="/about">About Propcott</a></li>
-			<li class="active"><a href="/creator-tips">Tips for Propcott Creators</a></li>
-			<li><a href="/supporter-tips">Tips for Propcotters</a></li>
-		</ul>
-	</div>
-	<div class="right-pane">
-		<div class="content">
-			<h1>Tips for Propcott Creators</h1>
+{% block head.end %}
+	{% parent %}
+	<script src='https://www.google.com/recaptcha/api.js'></script>
+	<style type="text/css">
+	#content {
+		padding: 1em 2em;
+		margin: 0;
+		margin-bottom: 2em;
+	}
+	</style>
+{% endblock %}
 
-			<h2>Set and simplify</h2>
-			<p>Remember that when you start a propcott, you set the terms for how others can take part. Try to make your propcott as simple as possible so people can understand and take action with ease.</p>
-
-			<h2>Share</h2>
-			<p>The power of social media is no secret. Share your propcott page on all social networks available to you and encourage your friends/followers to spread the word.</p>
-
-			<h2>Monitor and Keep track</h2>
-			After you publish your propcott, utilize our variety of tools to monitor and keep track of your propcott.
-
-			<h2>Communicate</h2>
-			<p>Chat and engage in dialogue with your supporters by posting updates and by commenting through the Facebook plugin.</p>
-
-			<h2>Do's</h2>
-			<ul>
-				<li>Explain HOW to boycott with specific simple words and phrases</li>
-				<li>Put yourself in supporters shoes. Would this be an easy task to undertake?</li>
-			</ul>
-
-			<h2>Dont's</h2>
-			<ul>
-				<li>Don't simply say "boycott" in the "How" section. Explain how to. For example, in order to boycott a food and beverage conglomerate, list out the company's 3 best selling products for others to avoid.</li>
-				<li>Don't lie. Be honest with your information, sources, and most importantly, your purpose.</li>
-			</ul>
-		</div>
+{% block hero %}
+{% autoescape false %}
+<div class="headline">
+	<div class="headline-content" style="padding-top: 1em;">
+		<h1>Tips for Propcott Creators</h1>
 	</div>
 </div>
+{% endautoescape %}
+{% endblock %}
+
+{% block actions %}
+<li><a href="/about">About<br>Propcott</a></li>
+<li><a href="/creator-tips">Tips for<br>Propcott Creators</a></li>
+<li><a href="/supporter-tips">Tips for<br>Propcotters</a></li>
+{% endblock %}
+
+{% block content %}
+<h2>Set and simplify</h2>
+<p>Remember that when you start a propcott, you set the terms for how others can take part. Try to make your propcott as simple as possible so people can understand and take action with ease.</p>
+
+<h2>Share</h2>
+<p>The power of social media is no secret. Share your propcott page on all social networks available to you and encourage your friends/followers to spread the word.</p>
+
+<h2>Monitor and Keep track</h2>
+After you publish your propcott, utilize our variety of tools to monitor and keep track of your propcott.
+
+<h2>Communicate</h2>
+<p>Chat and engage in dialogue with your supporters by posting updates and by commenting through the Facebook plugin.</p>
+
+<h2>Do's</h2>
+<ul>
+	<li>Explain HOW to boycott with specific simple words and phrases</li>
+	<li>Put yourself in supporters shoes. Would this be an easy task to undertake?</li>
+</ul>
+
+<h2>Dont's</h2>
+<ul>
+	<li>Don't simply say "boycott" in the "How" section. Explain how to. For example, in order to boycott a food and beverage conglomerate, list out the company's 3 best selling products for others to avoid.</li>
+	<li>Don't lie. Be honest with your information, sources, and most importantly, your purpose.</li>
+</ul>
 {% endblock %}
